--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -33,7 +33,7 @@
           <li><a href="/"><i class="fa fa-home fa-lg"></i> Home</a></li>
         <% } %>
 
-          <% if(title == "Books List") { %>
+          <% if(title == "books") { %>
           <li class="active"><a href="/books"><i class="fa fa-book fa-lg">
           </i> Books List</a></li>
           <% } else { %>
