--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -5,12 +5,20 @@
       <div class="row">
         <div class="col-md-offset-3 col-md-6">
           <h1><%= title %></h1>
-            <form class="form" method="post">
+            <form class="form" method="post" action="<%= action %><%= books._id %>">
               <div class="form-group">
                 <label for="NameTextField">Title</label>
                 <input type="text" class="form-control" id="NameTextField"
                 placeholder="Book Name" name="title" value="<%= books.Title %>" required>
               </div>
+
+              <!-- I wanted a description-->
+              <div class="form-group">
+                <label for="NameTextField">Description</label>
+                <input type="text" class="form-control" id="NameTextField"
+                placeholder="Book Description" name="description" value="<%= books.Description %>" required>
+              </div>
+
               <div class="form-group">
                 <label for="PriceTextField">Price</label>
                 <input type="text" class="form-control" id="PriceTextField"
