--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -5,8 +5,8 @@
       <div class="row">
         <div class="col-md-offset-1 col-md-10">
           <h3>Favourite Books List </h3>
-          <!-- ------------------------ -->         
-          <a href="books-index/details" class="btn btn-primary" role="button">
+          <!--Add Button------------------------ -->         
+          <a href="/books/add" class="btn btn-primary">
           <i class="fa fa-plus"></i> Add a book</a>
           <br>
           <div class="table-responsive">
@@ -31,15 +31,15 @@
                   <td class="text-center"><%= books[count].Genre %></td>
 
                   <td class="text-center">
-                    <!-- ------------------------ -->                    
-                    <a href="/books-index/details/<%= books[count]._id %>" class="btn btn-primary btn-sm">
-                                <i class="fas fa-pencil-alt"></i> Edit</a>
+                    <!--EDIT button ------------------------ -->                    
+                    <a href="/books/<%= books[count]._id %>" class="btn btn-primary btn-sm">
+                    <i class="fas fa-pencil-alt"></i> Edit</a>
                   </td>
 
                   <td class="text-center">
                     <!-- ------------------------ -->                    
-                    <a href="/books-index/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm">
-                                <i class="fas fa-trash-alt"></i> Delete</a>
+                    <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm">
+                            <i class="fas fa-trash-alt"></i> Delete</a>
                   </td>
                 </tr>
                 <% } %>
