added name and stID for 3 files

--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header.ejs %>
-
+<!--Domingo Novello 301017413-->
     <!-- MAIN CONTENT -->
     <div class="container">
       <div class="row">
